security: harden CORS config, BCrypt strength 12, explicit origins from env var